[project]
name = "esgf-playground-utils"
version = "1.0.2"
description = "Common library and models for the ESGF-Playground"
readme = "README.rst"
authors = [
    {"name" = "David Poulter", "email" = "david.poulter@stfc.ac.uk"},
    {"name" = "Rhys Evans", "email" = "rhys.r.evans@stfc.ac.uk"},
    {"name" = "Ed Borthwick", "email" = "ed.borthwick@stfc.ac.uk"},
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic-settings (<=2.6.1,<3.0.0)",
    "stac-pydantic (>=3.1.1,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "stac-fastapi-api @ git+https://github.com/stac-utils/stac-fastapi.git@refs/pull/744/head#subdirectory=stac_fastapi/api",
    "stac-fastapi-types @ git+https://github.com/stac-utils/stac-fastapi.git@refs/pull/744/head#subdirectory=stac_fastapi/types",
    "stac-fastapi-extensions @ git+https://github.com/stac-utils/stac-fastapi.git@refs/pull/744/head#subdirectory=stac_fastapi/extensions"
]

[dependency-groups]
black = [
    "black (<=24.4.2,<25.0.0)",
    "pre-commit (>=3.7.1,<4.0.0)"
]
mypy = [
    "mypy (<=1.10.1,<2.0.0)",
    "pre-commit (>=3.7.1,<4.0.0)"
]
bandit = [
    "bandit (<=1.7.10,<2.0.0)",
    "pre-commit (>=3.7.1,<4.0.0)"
]
ruff = [
    "ruff (<=0.7.3,<1.0.0)",
    "pre-commit (>=3.7.1,<4.0.0)"
]
isort = [
    "isort (<=5.13.2,<6.0.0)",
    "pre-commit (>=3.7.1,<4.0.0)"
]
xenon = [
    "xenon (<=0.9.1,<1.0.0)",
    "pre-commit (>=3.7.1,<4.0.0)"
]
test = [
    "coverage[toml] (>=7.6.0,<8.0.0)"
]
docs = [
    "sphinx (>=77.4.7,<78.0.0)",
    "sphinx-autoapi (>=73.3.3,<74.0.0)",
    "sphinx-pydantic (>=70.1.1,<71.0.0)",
    "sphinx-rtd-theme (>=73.0.1,<74.0.0)",
    "sphinx-mdinclude (>=70.6.2,<71.0.0)"
]

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
strict = true
ignore_missing_imports = true
python_version = "3.9"

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100

[tool.quality.mccabe]
average = "A"
block = "A"
module = "A"

[tool.bandit]
skips = []

[tool.quality.audit]
ignore-code = ["CVE-2019-8341"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
