[project]
name = "esgf-playground-utils"
version = "1.0.4"
description = "Common library and models for the ESGF-Playground"
readme = "README.rst"
authors = [
    {"name" = "David Poulter", "email" = "david.poulter@stfc.ac.uk"},
    {"name" = "Rhys Evans", "email" = "rhys.r.evans@stfc.ac.uk"},
    {"name" = "Ed Borthwick", "email" = "ed.borthwick@stfc.ac.uk"},
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic-settings (>=2.6.1,<3.0.0)",
    "stac-pydantic (>=3.1.1,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "stac-fastapi.extensions==6.0.0"
]

[tool.poetry.group.black.dependencies]
black = "^24.4.2"
pre-commit = "^3.7.1"

[tool.poetry.group.mypy.dependencies]
mypy = "^1.10.1"
pre-commit = "^3.7.1"

[tool.poetry.group.bandit.dependencies]
bandit = "^1.7.9"
pre-commit = "^3.7.1"

[tool.poetry.group.ruff.dependencies]
ruff = "^0.5.2"
pre-commit = "^3.7.1"

[tool.poetry.group.isort.dependencies]
isort = "^5.13.2"
pre-commit = "^3.7.1"

[tool.poetry.group.xenon.dependencies]
xenon = "^0.9.1"
pre-commit = "^3.7.1"

[tool.poetry.group.test.dependencies]
coverage = { extras = ["toml"], version = "^7.6.0" }

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.7"
sphinx-autoapi = "^3.2.1"
sphinx-pydantic = "^0.1.1"
sphinx-rtd-theme = "^2.0.0"
sphinx-mdinclude = "^0.6.2"

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
strict = true
ignore_missing_imports = true
python_version = "3.10"

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100

[tool.quality.mccabe]
average = "A"
block = "A"
module = "A"

[tool.bandit]
skips = []

[tool.quality.audit]
ignore-code = ["CVE-2019-8341"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
